# Supra_Artificial_Intelligence

./: LICENSE.txt  README.md
Supra_AI_nccl_ollama_multigpu/: CMakeLists.txt  model_topology.json
Supra_AI_nccl_ollama_multigpu/include/: config.hpp  gpu_utils.hpp  model_topology.hpp  scheduler.hpp  worker.hpp
Supra_AI_nccl_ollama_multigpu/src/: api_http.cpp  gpu_utils.cpp  llama_backend.cpp  lora_nccl.cpp  model_topology.cpp  nccl_utils.cpp  scheduler.cpp  scheduler_threadsafe.cpp  worker.cpp
Supra_AI_rccl_ollama_multigpu/: CMakeLists.txt
Supra_AI_rccl_ollama_multigpu/include/: api_http.hpp  gpu_utils.hpp  llama_backend.hpp  lora_adapter.hpp  lora_nccl.hpp  nccl_utils.hpp  scheduler_threadsafe.hpp
Supra_AI_rccl_ollama_multigpu/src/: config.cpp  lora_nccl.cpp  main_mpi_nccl.cpp  model_topology.cpp  worker.cpp
